Initial internal support for slot frames with dynamic lifetime.

--- a/src/vm/handles/CMakeLists.txt
+++ b/src/vm/handles/CMakeLists.txt
@@ -2,6 +2,8 @@ target_sources(tiro_objects
     PRIVATE
         fwd.hpp
 
+        frame.cpp
+        frame.hpp
         global.cpp
         global.hpp
         handle.hpp
