--- a/test/vm/handles/CMakeLists.txt
+++ b/test/vm/handles/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(tiro_tests
     PRIVATE
+        frame_test.cpp
         handle_test.cpp
         scope_test.cpp
         span_test.cpp
