--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,10 +3,11 @@ add_executable(tiro_tests
 )
 
 target_link_libraries(tiro_tests PRIVATE common_flags)
-target_link_libraries(tiro_tests PRIVATE tiro_objects)
+target_link_libraries(tiro_tests PRIVATE tiro_objects tiro_api_objects)
 target_link_libraries(tiro_tests PRIVATE Catch2::Catch2)
 target_include_directories(tiro_tests PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 
+add_subdirectory(api)
 add_subdirectory(compiler)
 add_subdirectory(common)
 add_subdirectory(eval)
