--- a/src/run/CMakeLists.txt
+++ b/src/run/CMakeLists.txt
@@ -13,4 +13,4 @@ endif()
 add_executable(tiro_run_c c_main.c)
 target_link_libraries(tiro_run_c PRIVATE common_flags)
 target_compile_options(tiro_run_c PRIVATE "-Wall" "-Werror" "-std=c89")
-target_link_libraries(tiro_run_c PRIVATE tiro_dyn)
+target_link_libraries(tiro_run_c PRIVATE tiro)
